--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "scripts": {
